--- a/src/views/partials/nav.ejs
+++ b/src/views/partials/nav.ejs
@@ -1,4 +1,22 @@
 <nav class="navbar navbar-light" style="background-color: #04BAB5;">
-  <a class="navbar-brand"> <button type="button" name="button" class="btn btn-outline-dark btn-lg"><span class="fa fa-users-cog"></span></button><b> Order Management Service </b></a>
-  <a href="logout" class="btn btn-outline-dark mr-sm-2"> <span class="fa fa-sign-out-alt"></span> Signout</a>
+  <a class="navbar-brand"> <button type="button" name="button" data-pushbar-target="pushbar" class="from_left btn btn-outline-dark btn-lg"><span class="  fa fa-users-cog"></span></button><b> Order Management Service </b></a>
+
+
+
+
+  <aside data-pushbar-id="pushbar" class="pushbar from_left pushbar-menu">
+    <div class="title"><span data-pushbar-close class="close push_right"></span></div>
+
+    <nav class="menu">
+      <span class="  fa fa-users-cog btn-lg right"></span><b> OMS </b>
+      <a href="/profile">Inicio</a>
+      <a href="/error">Reporte de errores</a>
+      <a href="">Facturaciones</a>
+      <a href="#">Personal</a>
+      <a href="#">Descuentos</a>
+      <a href="#"></a>
+      <a href="logout">Cerrar Sesión</a>
+    </nav>
+
+  </aside>
 </nav>
