--- a/src/views/error.ejs
+++ b/src/views/error.ejs
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <% include partials/head %>
 
+    <% include partials/head %>
+    <link href="https://unpkg.com/bootstrap-table@1.15.2/dist/bootstrap-table.min.css" rel="stylesheet">
+
+    <script src="https://unpkg.com/bootstrap-table@1.15.2/dist/bootstrap-table.min.js"></script>
     <meta charset="utf-8">
     <title>OMS Reporte de errores</title>
     <script type="text/javascript" src="js/date.js"></script>
-
   </head>
   <body>
     <% include partials/nav %>
@@ -32,7 +34,7 @@
 
 
             <div class=" input-group mb-3 5 ml-5 mt-5 ">
-              <a class="btn btn-outline-info justify-content-end" onclick="ConsultarReporte()"> buscar </a>
+              <a class="btn btn-outline-info justify-content-end" onclick="ConsultarReporte()" id = "button"> buscar </a>
             </div>
 
           </form>
@@ -41,43 +43,22 @@
     <!---Finaliza el div de consulta de fechas---->
   </div>
     <div class="jumbotron ml-5 mr-5">
-      <table class="table table-striped">
-  <thead class="table-info table-hover">
-  <tr>
-    <th scope="col">Order number </th>
-    <th scope="col">Adress</th>
-    <th scope="col">Helper</th>
-    <th scope="col">Service type</th>
-    <th scope="col">Details</th>
+      <table class="table table-striped " id="table" data-toggle="table"  data-toolbar="#toolbar">
+        <thead class="table-info table-hover">
+        <tr>
+          <th scope="col" data-field="id">Numero de caso </th>
+            <th scope="col" data-field="cabecera">Reporte</th>
+            <th scope="col" data-field="contenido">Contenido</th>
 
-    <th scope="col">Status</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+        </tr>
+        </tbody>
+      </table>
 
-  </tr>
-  </thead>
-  <tbody>
-  <tr>
-    <th scope="col">201932542339 </th>
-    <th scope="col">Sur 20 306 2</th>
-    <th scope="col"> El sebas que no veo v':</th>
-    <th scope="col">Básico</th>
-    <th scope="col">
-      <a href="/details" target="_blank" onClick="window.open(this.href, this.target, 'width=screen.width,height=screen.height'); return false;">
-        <button type="button" class="btn btn-link-dark" ><span class="fa fa-folder-open"></span>
-        </button>
-      </a>
-    </th>
-    <th scope="col">
-      <div class="btn-group" role="group">
-        <button type="button" class="btn btn-outline-success"disabled><span class="fa fa-check"></span></button>
-        <button type="button" class="btn btn-outline-danger"disabled><span class="fa fa-times"> </span></button>
-      </div>
-    </th>
-
-  </tr>
-  </tbody>
-  </table>
-
-      <h1 class="display-4 text-center" id="texto">Make a query </h1>
+      <h1 class="display-4 text-center " id="texto">Make a query </h1>
 
 
   </div>
@@ -88,5 +69,6 @@
     overlay:true,
   });
   </script>
+
   </body>
 </html>
