--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -5,6 +5,8 @@
 <link rel="stylesheet" href="/css/main.css">
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<link href="https://unpkg.com/bootstrap-table@1.15.2/dist/bootstrap-table.min.css" rel="stylesheet">
+
 <script>
 $( function() {
   $( "#datepicker" ).datepicker({
