--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -5,6 +5,10 @@
       <title>Index</title>
 
       <% include partials/head %>
+      <link href="https://unpkg.com/bootstrap-table@1.15.2/dist/bootstrap-table.min.css" rel="stylesheet">
+
+      <script src="https://unpkg.com/bootstrap-table@1.15.2/dist/bootstrap-table.min.js"></script>
+
       <script type="text/javascript" src="js/date.js"></script>
 
     </head>
@@ -32,16 +36,16 @@
       <!---Finaliza el div de consulta de fechas---->
 
       <div class="jumbotron ml-5 mr-5">
-        <table class="table table-striped">
+        <table class="table table-striped" id="table" data-toggle="table"  data-toolbar="#toolbar">
   <thead class="table-info table-hover">
     <tr>
-      <th scope="col">Order number </th>
-      <th scope="col">Adress</th>
-      <th scope="col">Helper</th>
-      <th scope="col">Service type</th>
-      <th scope="col">Details</th>
+      <th scope="col" data-field="orden">Order number </th>
+      <th scope="col" data-field="direccion">Adress</th>
+      <th scope="col" data-field="persona">Helper</th>
+      <th scope="col" data-field="tipo">Service type</th>
+      <th scope="col" data-field="detalles">Details</th>
 
-      <th scope="col">Status</th>
+      <th scope="col" data-field="estatus">Status</th>
 
     </tr>
   </thead>
