--- a/src/views/partials/nav.ejs
+++ b/src/views/partials/nav.ejs
@@ -11,7 +11,7 @@
       <span class="  fa fa-users-cog btn-lg right"></span><b> OMS </b>
       <a href="/profile">Inicio</a>
       <a href="/error">Reporte de errores</a>
-      <a href="">Facturaciones</a>
+      <a href="/facturacion">Facturaciones</a>
       <a href="#">Personal</a>
       <a href="#">Descuentos</a>
       <a href="#"></a>
