--- a/src/views/error.ejs
+++ b/src/views/error.ejs
@@ -3,9 +3,6 @@
   <head>
 
     <% include partials/head %>
-    <link href="https://unpkg.com/bootstrap-table@1.15.2/dist/bootstrap-table.min.css" rel="stylesheet">
-
-    <script src="https://unpkg.com/bootstrap-table@1.15.2/dist/bootstrap-table.min.js"></script>
     <meta charset="utf-8">
     <title>OMS Reporte de errores</title>
     <script type="text/javascript" src="js/date.js"></script>
@@ -34,7 +31,7 @@
 
 
             <div class=" input-group mb-3 5 ml-5 mt-5 ">
-              <a class="btn btn-outline-info justify-content-end" onclick="ConsultarReporte()" id = "button"> buscar </a>
+              <a class="btn btn-outline-info justify-content-end" onclick="ConsultarError()" id = "button"> buscar </a>
             </div>
 
           </form>
@@ -68,6 +65,11 @@
     blur:true,
     overlay:true,
   });
+  </script>
+  <script>
+      $('#datepicker').datepicker({
+          uiLibrary: 'bootstrap4'
+      });
   </script>
 
   </body>
