--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -5,11 +5,7 @@
       <title>Index</title>
 
       <% include partials/head %>
-      <link href="https://unpkg.com/bootstrap-table@1.15.2/dist/bootstrap-table.min.css" rel="stylesheet">
 
-      <script src="https://unpkg.com/bootstrap-table@1.15.2/dist/bootstrap-table.min.js"></script>
-
-      <script type="text/javascript" src="js/date.js"></script>
 
     </head>
     <body>
@@ -19,14 +15,16 @@
       <!---Inicia el div de consulta de fechas---->
       <section>
         <div class="card mx-5 my-5 bg-light ">
-          <form class="form-inline d-flex " id="datos">
+          <form class="form-inline d-flex " id="toolbarSearch">
               <div class="justify-content-start input-group mb-3 5 ml-5 mt-5 ">
                 <div class="input-group-prepend">
                   <label class="input-group-text" for="inputGroupSelect01">Date</label>
+                  <input id="datepicker" width="276" disabled/>
+
                 </div>
-                <input type="text" id="datepicker" disabled>
 
               </div>
+
               <div class=" input-group mb-3 5 ml-5 mt-5 ">
                 <a class="btn btn-outline-info justify-content-end" onclick="create()"> buscar </a>
               </div>
@@ -36,45 +34,70 @@
       <!---Finaliza el div de consulta de fechas---->
 
       <div class="jumbotron ml-5 mr-5">
-        <table class="table table-striped" id="table" data-toggle="table"  data-toolbar="#toolbar">
-  <thead class="table-info table-hover">
-    <tr>
-      <th scope="col" data-field="orden">Order number </th>
-      <th scope="col" data-field="direccion">Adress</th>
-      <th scope="col" data-field="persona">Helper</th>
-      <th scope="col" data-field="tipo">Service type</th>
-      <th scope="col" data-field="detalles">Details</th>
+        <table id="table" class="table table-striped" data-toggle="table">
+          <thead class="table-info table-hover">
+            <tr>
+              <th scope="col" data-field="orden">Order number </th>
+              <th scope="col" data-field="direccion">Adress</th>
+              <th scope="col" data-field="persona">Helper</th>
+              <th scope="col" data-field="tipo">Service type</th>
+              <th scope="col" data-field="detalles">Details</th>
 
-      <th scope="col" data-field="estatus">Status</th>
+              <th scope="col" data-field="estatus">Status</th>
 
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="col">201932542339 </th>
-      <th scope="col">Sur 20 306 2</th>
-      <th scope="col"> El sebas que no veo v':</th>
-      <th scope="col">Básico</th>
-      <th scope="col">
-        <a href="/details" target="_blank" onClick="window.open(this.href, this.target, 'width=screen.width,height=screen.height'); return false;">
-          <button type="button" class="btn btn-link-dark" ><span class="fa fa-folder-open"></span>
-          </button>
-        </a>
-      </th>
-      <th scope="col">
-        <div class="btn-group" role="group">
-          <button type="button" class="btn btn-outline-success"disabled><span class="fa fa-check"></span></button>
-          <button type="button" class="btn btn-outline-danger"disabled><span class="fa fa-times"> </span></button>
-        </div>
-      </th>
-
-    </tr>
-  </tbody>
-</table>
+            </tr>
+          </thead>
+        </table>
 
         <h1 class="display-4 text-center" id="texto">Make a query </h1>
+      </div>
 
-  </div>
+
+      <div class="container mt-3">
+        <!-- The Modal -->
+        <div class="modal fade" id="newModal" role="dialog">
+          <div class="modal-dialog modal-lg">
+
+            <div class="modal-content">
+              <div class="modal-body">
+                <table class="table table-striped" id="prueba" data-toggle="table"  data-toolbar="#toolbar">
+                  <thead>
+                    <tr>
+                      <th scope="col" data-field="calle">Calle </th>
+                      <th scope="col" data-field="colonia">Colonia</th>
+                      <th scope="col" data-field="alcaldia">Alcaldía </th>
+                      <th scope="col" data-field="cp">Código postal</th>
+                      <th scope="col" data-field="referencias">Referencias</th>
+                    </tr>
+                  </thead>
+                </table>
+                <table class="table table-striped" id="fechas" data-toggle="table"  data-toolbar="#toolbar">
+                  <thead>
+                    <tr>
+                      <th scope="col" data-field="fecha">fecha </th>
+                      <th scope="col" data-field="hora">hora</th>
+                      <th scope="col" data-field="uid">uid </th>
+                    </tr>
+                  </thead>
+                </table>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+              </div>
+            </div>
+
+          </div>
+        </div>
+
+      </div>
+      <script>
+
+         function LoadModalTable(folio, consulta){
+             consultarReporte(folio, consulta);
+
+          }
+
+      </script>
   <script type="text/javascript" src="css/pushbar.js"></script>
   <script type="text/javascript">
   	var pushbar = new Pushbar({
@@ -83,6 +106,11 @@
   	});
 
   </script>
-
+  <script>
+      $('#datepicker').datepicker({
+          uiLibrary: 'bootstrap4'
+      });
+  </script>
+  <script type="text/javascript" src="js/date.js"></script>
     </body>
   </html>
