--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -19,9 +19,9 @@
               <div class="justify-content-start input-group mb-3 5 ml-5 mt-5 ">
                 <div class="input-group-prepend">
                   <label class="input-group-text" for="inputGroupSelect01">Date</label>
-                  <input id="datepicker" width="276" disabled/>
 
                 </div>
+                <input id="datepicker" width="276" class="input-group-text form-control" placeholder="" disabled/>
 
               </div>
 
@@ -34,7 +34,7 @@
       <!---Finaliza el div de consulta de fechas---->
 
       <div class="jumbotron ml-5 mr-5">
-        <table id="table" class="table table-striped" data-toggle="table">
+        <table id="table"data-toggle="table" class="table table-striped" data-unique-id="orden">
           <thead class="table-info table-hover">
             <tr>
               <th scope="col" data-field="orden">Order number </th>
@@ -47,6 +47,8 @@
 
             </tr>
           </thead>
+          <tbody>
+          </tbody>
         </table>
 
         <h1 class="display-4 text-center" id="texto">Make a query </h1>
@@ -55,7 +57,7 @@
 
       <div class="container mt-3">
         <!-- The Modal -->
-        <div class="modal fade" id="newModal" role="dialog">
+        <div class="modal fade" id="newModal" role="dialog" width="$(window).width()">
           <div class="modal-dialog modal-lg">
 
             <div class="modal-content">
@@ -68,6 +70,8 @@
                       <th scope="col" data-field="alcaldia">Alcaldía </th>
                       <th scope="col" data-field="cp">Código postal</th>
                       <th scope="col" data-field="referencias">Referencias</th>
+                      <th scope="col" data-field="edit"></th>
+
                     </tr>
                   </thead>
                 </table>
@@ -77,9 +81,11 @@
                       <th scope="col" data-field="fecha">fecha </th>
                       <th scope="col" data-field="hora">hora</th>
                       <th scope="col" data-field="uid">uid </th>
+                      <th scope="col" data-field="edit"></th>
                     </tr>
                   </thead>
                 </table>
+
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
@@ -98,6 +104,7 @@
           }
 
       </script>
+
   <script type="text/javascript" src="css/pushbar.js"></script>
   <script type="text/javascript">
   	var pushbar = new Pushbar({
@@ -110,6 +117,29 @@
       $('#datepicker').datepicker({
           uiLibrary: 'bootstrap4'
       });
+  </script>
+  <script>
+    $(document).ready(function () {
+      console.log("iniciado");
+    })
+  </script>
+  <script>
+  var folio
+  $('#table').on('click-cell.bs.table', function (field, value, row, $el) {
+    if (value ==="orden"){
+      var a = $('#table').bootstrapTable('getRowByUniqueId', row)["tipo"]
+      folio = row
+    $('#table').bootstrapTable('updateCellByUniqueId', {id: folio, field: 'tipo', value: '<input type="text" class ="form-control"name="" id ="valor1" value="'+a+'">'})
+    // ...
+  }
+  if (value ==="direccion"){
+    var a = document.getElementById('valor1').value
+    console.log(a);
+    console.log(row);
+  $('#table').bootstrapTable('updateCellByUniqueId', {id: folio, field: 'tipo', value: a})
+  // ...
+}
+  })
   </script>
   <script type="text/javascript" src="js/date.js"></script>
     </body>
